added prototype method

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
     <script defer src="./js/script.js"></script>
-    <title>HTML Typescript Template</title>
+    <title>Odin Library</title>
   </head>
   <body>
     <h1>Odin Library</h1>
@@ -34,11 +34,10 @@
     <table>
       <thead>
         <tr>
-          <th>Index</th>
           <th>Name</th>
           <th>Author</th>
           <th>Pages</th>
-          <th>Is Read</th>
+          <th>Read</th>
           <th>Delete Button</th>
         </tr>
       </thead>
